--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,14 +3,25 @@
 }
 
 #map { 
-    height: 80vh;
-    width: 80vw; }
+    height: 100%;
+    width: 100%; }
 
   .main {
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(2, 0, 36) 0%, rgb(70, 9, 121) 35%, rgb(147, 0, 255) 100%);
-    height: 100vh;
-    width: 100vw;
-    display: flex;
+    // background: linear-gradient(90deg, rgb(2, 0, 36) 0%, rgb(70, 9, 121) 35%, rgb(147, 0, 255) 100%);
+    min-height: 100dvh;
     padding: 5rem;
   }
+
+  
+
+  .mat-icon, .mat-icon:active {
+
+    width: fit-content;
+    color: #007194;
+    cursor: move;
+    position: relative;
+    z-index: 1222000;
+  }
+
+  
