--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,8 @@
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: "Asap", sans-serif;}
+
+.mat-typography h2 {
+    font-family: "Asap", sans-serif;
+}
