--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -140,8 +140,8 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: #816400;
-  background: whitesmoke;
+  color: white;
+  background: #211d74;
   padding: 5px;
   margin: 5px;
   border-radius: 10px;
