--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,10 @@ h2 {
   margin: 0px;
 }
 
+.mat-icon {
+  cursor: pointer;
+}
+
 #map { 
     width: 100%;
     border-radius: 10px;
@@ -21,15 +25,12 @@ h2 {
 }
 
 .marker-container {
-  border: 1px solid #4038d8;
-  border-radius: 10px;
   display: flex;
   align-items: center;
   padding: 1rem;
-  height: 20%;
 
   .marker {
-    transform: scale(2);
+    transform: scale(1.2);
     width: fit-content;
     color: #007194;
     cursor: move;
@@ -163,6 +164,12 @@ h2 {
 }
 
 .h-80 {
-    height: 38rem;
+    height: 86vh;
     margin-top: 1.5rem;
+}
+
+@media only screen and (max-width:600px) {
+  .h-80 {
+    height: 68vh;
+  } 
 }
