--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,7 @@ h2 {
   .marker {
     transform: scale(1.2);
     width: fit-content;
-    color: #007194;
+    color: #fcd34d;
     cursor: move;
     position: relative;
   }
@@ -153,7 +153,7 @@ h2 {
 }
 
 .day-container {
-    max-height: 25rem;
+    max-height: 40rem;
     overflow: auto;
     cursor: pointer;
 
