--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -90,11 +90,11 @@ h2 {
     color: black;
     padding: 10px;
     position: absolute;
-    top: 4rem;
+    top: 5.1rem;
     z-index: 2;
     display: flex;
     flex-direction: column;
-    right: 20px;
+    right: 33px;
     width: 33%;
 
     div {
@@ -102,13 +102,14 @@ h2 {
 
       p{
         margin: 0%;
-        padding: 5px;
+        padding: 10px;
       }
 
       &:hover{
         background-color: rgba(222, 221, 221, 0.869);
-        transform: scale(1.05);
+        transform: scale(1.03);
         cursor: pointer;
+        border-bottom: 1px solid #fcd34d;
       }
     }
 }
@@ -143,7 +144,7 @@ h2 {
   justify-content: space-between;
   color: white;
   background: #211d74;
-  padding: 5px;
+  padding: 10px;
   margin: 5px;
   border-radius: 10px;
 
@@ -172,4 +173,23 @@ h2 {
   .h-80 {
     height: 68vh;
   } 
+
+  .results{
+    top: 10rem;
+    width: 88%;
+    right: unset; 
+  }
 }
+
+:host ::ng-deep {
+  .mat-mdc-slide-toggle .mdc-form-field {
+    color: white !important;  
+    font-family: 'Asap', sans-serif;
+    font-size: 1.2rem !important;
+  }
+
+  .mdc-label {
+    font-size: 1rem !important;
+  }
+}
+
